// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<div
  class="za-radio theme-primary checked"
>
  <div
    class="za-radio-wrapper"
  >
    <span
      class="za-radio-inner"
    />
    <span
      class="za-radio-text"
    >
      选项一
    </span>
    <input
      checked=""
      class="za-radio-input"
      type="radio"
    />
  </div>
</div>
`;

exports[`Radio renders correctly 1`] = `
<div
  class="za-radio theme-primary"
>
  <div
    class="za-radio-wrapper"
  >
    <span
      class="za-radio-inner"
    />
    <span
      class="za-radio-text"
    >
      选项一
    </span>
    <input
      class="za-radio-input"
      type="radio"
    />
  </div>
</div>
`;

exports[`Radio type is button 1`] = `
<a
  aria-disabled="false"
  class="za-button za-radio theme-primary theme-primary size-xs bordered"
  role="button"
>
  <span>
    <input
      class="za-radio-input"
      type="radio"
      value="0"
    />
    选项一
  </span>
</a>
`;

exports[`Radio type is cell 1`] = `
<div
  class="za-cell is-link"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    />
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-content"
      >
        <input
          class="za-radio-input"
          type="radio"
          value="0"
        />
        选项一
      </div>
    </div>
    <div
      class="za-cell-footer"
    />
  </div>
</div>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group"
>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项一
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary checked"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项三
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group"
>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项一
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary checked"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项三
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group"
>
  <div
    class="za-radio theme-primary checked"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项一
      </span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项二
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
  <div
    class="za-radio theme-primary"
  >
    <div
      class="za-radio-wrapper"
    >
      <span
        class="za-radio-inner"
      />
      <span
        class="za-radio-text"
      >
        选项三
      </span>
      <input
        class="za-radio-input"
        type="radio"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group type is cell 1`] = `
<div
  className="za-radio-group"
>
  <Radio
    block={false}
    checked={false}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="0"
  >
    选项一
  </Radio>
  <Radio
    block={false}
    checked={false}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="1"
  >
    选项二
  </Radio>
  <Radio
    block={false}
    checked={false}
    disabled={true}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="2"
  >
    选项三
  </Radio>
</div>
`;
